--- a/apps/istio.yaml
+++ b/apps/istio.yaml
@@ -30,6 +30,8 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: istio-cni
+  annotations:
+    argocd.argoproj.io/sync-wave: "2"
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
@@ -58,6 +60,8 @@ kind: Application
 metadata:
   name: istiod
   namespace: argocd
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
@@ -90,6 +94,8 @@ kind: Application
 metadata:
   name: istio-ztunnel
   namespace: argocd
+  annotations:
+    argocd.argoproj.io/sync-wave: "3"
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
