Installing istio-cni in istio-system namespace

--- a/apps/istio.yaml
+++ b/apps/istio.yaml
@@ -38,7 +38,7 @@ metadata:
 spec:
   destination:
     server: https://kubernetes.default.svc
-    namespace: kube-system
+    namespace: istio-system
   project: default
   sources:
     - chart: cni
