Apparently telling istio what platform I'm running on was not the move

--- a/istio/istio-cni/values.yaml
+++ b/istio/istio-cni/values.yaml
@@ -1,3 +1,6 @@
 profile: ambient
 global:
   platform: k3s
+
+cniConfDir: /var/lib/rancher/k3s/agent/etc/cni/net.d
+cniBinDir: /var/lib/rancher/k3s/data/cni
